# backend/swagger.yaml
@@ -121,6 +121,50 @@ paths:
           description: Server Exception
         "401":
           description: Unauthorized
+  /class/getDailyGroup:
+    post:
+      tags:
+        - Class
+      summary: Get the group for that class for the user logged in
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                classId:
+                  type: string
+            example:
+              classId: "65d679f08f3afb1b89eebfc3"
+      operationId: getUserGroup
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  topFour:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        user:
+                          type: object
+                          properties:
+                            id:
+                              type: string
+                            name:
+                              type: string
+                        score:
+                          type: number
+        "422":
+          description: Validation exception
+        "500":
+          description: Server Exception
+        "401":
+          description: Unauthorized
   /hello:
     post:
       tags:
